specify the mouse cursor

--- a/resources/css/carousel.css
+++ b/resources/css/carousel.css
@@ -12,6 +12,7 @@
 /* -------------- SLIDES ---------------- */
 /* -------------------------------------- */
 .dvp-carousel .dvp-carousel-slide {
+	cursor: pointer;
 	height: 100%;
 	position: absolute;
 	top: 0;
