--- a/resources/css/carousel.css
+++ b/resources/css/carousel.css
@@ -2,29 +2,29 @@
  * The CSS specific to the banner rotating component.
  */
 .dvp-carousel {
-	border: 1px solid #D7D7D7;
-	max-width: 610px !important;
-	min-width: 340px !important;
-	position: relative;
+    border: 1px solid #D7D7D7;
+    max-width: 610px !important;
+    min-width: 340px !important;
+    position: relative;
 }
 
 /* -------------------------------------- */
 /* -------------- SLIDES ---------------- */
 /* -------------------------------------- */
 .dvp-carousel .dvp-carousel-slide {
-	cursor: pointer;
-	cursor: alias;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index: 0;
+    cursor: pointer;
+    cursor: alias;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 0;
 }
 
 .dvp-carousel .dvp-carousel-slide-wrapper,
 .dvp-carousel .dvp-carousel-slide img {
-	height: 100%;
-	width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 /* -------------------------------------- */
@@ -38,8 +38,8 @@
 }
 
 .dvp-carousel .dvp-carousel-thumb-text {
-	background-color: #EEE;
-	
+    background-color: #EEE;
+    
     /* experimental */
     background-image: -moz-linear-gradient(0deg, #F0F0F0, #D7D7D7);
     background-image: -ms-linear-gradient(0deg, #F0F0F0, #D7D7D7);
@@ -60,13 +60,13 @@
 }
 
 .dvp-carousel .text-only img {
-	display: none;
-	visibility: hidden;
+    display: none;
+    visibility: hidden;
 }
 
 .dvp-carousel .text-only .dvp-carousel-thumb-text {
-	background: #FFF;
-	background-image: none;
+    background: #FFF;
+    background-image: none;
     height: 61px; /* = thumb-fg */
     top: 0;
 }
@@ -75,7 +75,7 @@
 .dvp-carousel .text-only .dvp-carousel-thumb-ct {
     background: transparent;
     display: inline-block;
-    padding: 4px;
+    padding: 4px 4px 0 4px;
     position: relative;
     z-index: 100;
 }
@@ -93,11 +93,11 @@
 
 .dvp-carousel .dvp-carousel-thumb-nav-prev,
 .dvp-carousel .dvp-carousel-thumb-nav-next {
-	background-image: url(../images/carousel/nav-sprite.png);
-	cursor: pointer;
-	display: inline-block;
-	height: 16px;
-	width: 12px;
+    background-image: url(../images/carousel/nav-sprite.png);
+    cursor: pointer;
+    display: inline-block;
+    height: 16px;
+    width: 12px;
 }
 
 .dvp-carousel .dvp-carousel-thumb-nav-prev {
@@ -118,11 +118,10 @@
 
 .dvp-carousel .dvp-carousel-thumb,
 .dvp-carousel .dvp-carousel-hover {
-	cursor: pointer;
-	display: inline-block;
+    cursor: pointer;
+    display: inline-block;
     padding: 3px;
     position: relative;
-    vertical-align: middle;
     z-index: 1000;
 }
 
@@ -155,7 +154,7 @@
 
 /* ----- SMALL ----- */
 .dvp-carousel .footer-small {
-    top: -35px;
+    top: -27px;
 }
 
 .dvp-carousel .footer-small .dvp-carousel-thumb-ct-pretty {
@@ -180,23 +179,24 @@
 .dvp-carousel .footer-small .dvp-carousel-thumb-over .dvp-carousel-thumb-fg {
     background: url(../images/carousel/bullet_yellow.gif) no-repeat !important;
 }
-
+ 
 /* ----- LARGE ----- */
 .dvp-carousel .footer-large {
     top: -75px; /* = thumb-ct.height */
 }
 
 .dvp-carousel .footer-large .dvp-carousel-thumb-ct {
-	height: 75px; /* thumb.height + (thumb-ct.padding * 2) */
-	overflow: hidden;
-	white-space: nowrap;
-	width: 100%;
+    height: 75px; /* thumb.height + (thumb-ct.padding * 2) */
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
 }
 
 .dvp-carousel .footer-large .dvp-carousel-thumb,
 .dvp-carousel .dvp-carousel-hover {
     height: 67px;
     margin: 0 4px 4px 4px;
+    vertical-align: middle;
     width: 100px;
 }
 
@@ -213,13 +213,13 @@
 }
 
 .dvp-carousel .footer-large .dvp-carousel-thumb-active .dvp-carousel-thumb-bg {
-	background-color: #AAA;
+    background-color: #AAA;
 }
 
 .dvp-carousel .footer-large .dvp-carousel-thumb-over .dvp-carousel-thumb-bg {
-	background-color: #98E4FF !important;
-	filter: alpha(opacity=50);
-	opacity: .5;
+    background-color: #98E4FF !important;
+    filter: alpha(opacity=50);
+    opacity: .5;
 }
 
 /* ----- HOVER ----- */
@@ -233,11 +233,11 @@
 /* -------------------------------------- */
 .dvp-carousel .dvp-carousel-text,
 .dvp-carousel .dvp-carousel-text-bg {
-	color: #EEE;
-	font-size: large;
-	padding: 10px 25px;
-	position: absolute;
-	z-index: 100;
+    color: #EEE;
+    font-size: large;
+    padding: 10px 25px;
+    position: absolute;
+    z-index: 100;
 }
 
 .dvp-carousel .dvp-carousel-text-bg {
@@ -252,10 +252,10 @@
 }
 
 .dvp-carousel .dvp-carousel-text-tl {
-	left: 0;
-	top: 0;
-	text-align: left;
-	width: 80%;
+    left: 0;
+    top: 0;
+    text-align: left;
+    width: 80%;
 }
 
 .dvp-carousel .dvp-carousel-text-tc {
@@ -266,17 +266,17 @@
 }
 
 .dvp-carousel .dvp-carousel-text-tr {
-	right: 0;
-	top: 0;
-	text-align: right;
-	width: 80%;
+    right: 0;
+    top: 0;
+    text-align: right;
+    width: 80%;
 }
 
 .dvp-carousel .dvp-carousel-text-bl {
-	bottom: 75px; /* large footer.top */
-	left: 0;
-	text-align: left;
-	width: 80%;
+    bottom: 75px; /* large footer.top */
+    left: 0;
+    text-align: left;
+    width: 80%;
 }
 
 .dvp-carousel .dvp-carousel-text-bc {
@@ -287,45 +287,45 @@
 }
 
 .dvp-carousel .dvp-carousel-text-br {
-	bottom: 75px; /* large footer.top */
-	right: 0;
-	text-align: right;
-	width: 80%;
+    bottom: 75px; /* large footer.top */
+    right: 0;
+    text-align: right;
+    width: 80%;
 }
 
 .dvp-carousel .dvp-carousel-text-c {
-	text-align: center;
-	top: 40%;
-	width: 100%;
+    text-align: center;
+    top: 40%;
+    width: 100%;
 }
 
 /* -------------------------------------- */
 /* ----------------TIMER----------------- */
 /* -------------------------------------- */
 .dvp-carousel .dvp-carousel-timer {
-	position: absolute;
-	right: 5px;
-	top: 5px;
-	z-index: 1;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    z-index: 1;
 }
 
 /* -------------------------------------- */
 /* ------------------NAV----------------- */
 /* -------------------------------------- */
 .dvp-carousel .dvp-carousel-nav-ct {
-	position: absolute;
-	top: 50%;
-	width: 100%;
-	z-index: 1;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    z-index: 1;
 }
 
 .dvp-carousel .dvp-carousel-nav,
 .dvp-carousel .dvp-carousel-nav-bg {
-	cursor: pointer;
-	height: 32px;
-	margin: 5px;
-	position: absolute;
-	width: 32px;
+    cursor: pointer;
+    height: 32px;
+    margin: 5px;
+    position: absolute;
+    width: 32px;
 }
 
 .dvp-carousel .dvp-carousel-nav {
@@ -341,7 +341,7 @@
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
     filter: alpha(opacity=40);
     opacity:.4;
-	z-index: 1;
+    z-index: 1;
 }
 
 .dvp-carousel .dvp-carousel-nav-prev {
@@ -364,8 +364,8 @@
 
 /* OLD */
 .dvp-carousel .dvp-carousel-nav-prev-hor {
-	background-position: -32px 0px;
-	bottom: 50%;
+    background-position: -32px 0px;
+    bottom: 50%;
     left: 0;
 }
 
@@ -374,9 +374,9 @@
 }
 
 .dvp-carousel .dvp-carousel-nav-next-hor {
-	background-position: -32px -32px;
-	bottom: 50%;
-	right: 0;
+    background-position: -32px -32px;
+    bottom: 50%;
+    right: 0;
 }
 
 .dvp-carousel .dvp-carousel-nav-next-hor-over {
@@ -384,8 +384,8 @@
 }
 
 .dvp-carousel .dvp-carousel-nav-prev-vert {
-	background-position: -32px -64px;
-	left: 0;
+    background-position: -32px -64px;
+    left: 0;
     top: 0;
 }
 
@@ -394,9 +394,9 @@
 }
 
 .dvp-carousel .dvp-carousel-nav-next-vert {
-	background-position: -32px -96px;
-	bottom: 0;
-	left: 0;
+    background-position: -32px -96px;
+    bottom: 0;
+    left: 0;
 }
 
 .dvp-carousel .dvp-carousel-nav-next-vert-over {
