--- a/resources/css/carousel.css
+++ b/resources/css/carousel.css
@@ -12,8 +12,6 @@
 /* -------------- SLIDES ---------------- */
 /* -------------------------------------- */
 .dvp-carousel .dvp-carousel-slide {
-    cursor: pointer;
-    cursor: alias;
     height: 100%;
     overflow-x: hidden;
     position: absolute;
@@ -27,12 +25,18 @@
     height: 100%;
     width: 100%;
 }
+
 .dvp-carousel .dvp-carousel-slide img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-height: 100%;
     max-width: 100%;
+}
+
+.dvp-carousel .dvp-carousel-slide-linked {
+    cursor: pointer;
+    cursor: alias;
 }
 
 /* -------------------------------------- */
